correcciones tags y tasks
