# storage/api-docs/api-docs.json
@@ -2466,6 +2466,226 @@
                 ]
             }
         },
+        "/tag/index": {
+            "get": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Get All Tag",
+                "description": "Return Tag",
+                "operationId": "getTag",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/tag/store": {
+            "post": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Store Tag",
+                "description": "Store Tag",
+                "operationId": "storeTag",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Tag"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/tag/showbyid/{id}": {
+            "get": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Get One Tag By one Id",
+                "description": "Return One Tag",
+                "operationId": "getTagById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Tag Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/tag/update/{id}": {
+            "put": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Update One Tag By one Id",
+                "description": "Update One Tag",
+                "operationId": "getUpdateTagById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Tag Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Tag"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/tag/destroy/{id}": {
+            "delete": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Delete One Tag By one Id",
+                "description": "Delete One Tag",
+                "operationId": "getDestroyTagById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Tag Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/tag/showprojectbyid/{id}": {
+            "get": {
+                "tags": [
+                    "Tag"
+                ],
+                "summary": "Get One Project By one Id",
+                "description": "Return One Project by Id",
+                "operationId": "getShowProjectById",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Show Project by Id",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/task/index": {
             "get": {
                 "tags": [
@@ -3225,6 +3445,37 @@
                 },
                 "type": "object"
             },
+            "Commerce": {
+                "title": "Commerce",
+                "description": "Commerce body data",
+                "properties": {
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the Commerce",
+                        "type": "string",
+                        "example": "Name Commerce"
+                    },
+                    "description": {
+                        "title": "description",
+                        "description": "description of the Commerce",
+                        "type": "string",
+                        "example": "description Commerce"
+                    },
+                    "logo": {
+                        "title": "logo",
+                        "description": "logo of the Commerce",
+                        "type": "string",
+                        "example": "logo Commerce"
+                    },
+                    "active": {
+                        "title": "active",
+                        "description": "active of the Commerce",
+                        "type": "boolean",
+                        "example": false
+                    }
+                },
+                "type": "object"
+            },
             "Customer": {
                 "title": "Customer",
                 "description": "Customer body data",
@@ -3567,6 +3818,31 @@
                         "description": "Active of the Rol",
                         "type": "boolean",
                         "example": true
+                    }
+                },
+                "type": "object"
+            },
+            "Tag": {
+                "title": "Tag",
+                "description": "Tag body data",
+                "properties": {
+                    "category": {
+                        "title": "category",
+                        "description": "category of the Tag",
+                        "type": "string",
+                        "example": "category Tag"
+                    },
+                    "name": {
+                        "title": "name",
+                        "description": "Name of the Tag",
+                        "type": "string",
+                        "example": "Name Tag"
+                    },
+                    "active": {
+                        "title": "active",
+                        "description": "active of the Tag",
+                        "type": "boolean",
+                        "example": false
                     }
                 },
                 "type": "object"
